Add: 敵の手のimgタグにalt属性を追加

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="app">
     <!-- 敵の手が表示されるエリア -->
     <div class="enemy-hand">
-      <img :src="enemyHand">
+      <img :src="enemyHand" alt="ここに相手の手が表示されるよ">
     </div>
 
     <!-- 自分の手 -->
